--- a/index.html
+++ b/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-N5ZSR35G1D"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-N5ZSR35G1D');
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Face Recognition Quiz | 😋</title>
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
+    <meta name="google-site-verification" content="LSmqIcIf7dxqyIwtRy5gCO1PtH9XGZxoj2-PQAP-rmU" />
 </head>
 <body>
     <div class="loader"></div>
