--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Face Recognition Quiz | 😋</title>
+    <title>Face Recognition Quiz | 😋 Gimna Katugampala Production</title>
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
     <meta name="google-site-verification" content="LSmqIcIf7dxqyIwtRy5gCO1PtH9XGZxoj2-PQAP-rmU" />
 </head>
@@ -57,7 +57,7 @@
         </div>
     </div>
 
-   <p class="footer">Gimna Katugampala Production</p>
+   <!-- <p class="footer">Gimna Katugampala Production</p> -->
     
     <script src="script.js"></script>
 </body>
